m-site/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mweb-service
  namespace: m-site
spec:
  selector:
    app: m-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
